--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/naturalatlas/tilestrata-utfmerge",
   "dependencies": {
-    "tilestrata": "^0.7.1",
-    "tilestrata-dependency": "^0.2.1"
+    "async": "^0.9.0",
+    "tilestrata-dependency": "^0.2.2"
   },
   "devDependencies": {
     "chai": "^1.10.0",
