--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "description": "A TileStrata plugin for merging utfgrids",
   "author": "Brandon Reavis <brandon@naturalatlas.com>",
-  "license": "Apache License, v2.0",
+  "license": "Apache-2.0",
   "main": "index.js",
   "scripts": {
     "test": "mocha -R tap"
@@ -24,12 +24,12 @@
   },
   "homepage": "https://github.com/naturalatlas/tilestrata-utfmerge",
   "dependencies": {
-    "async": "^0.9.0",
-    "tilestrata-dependency": "^0.2.2"
+    "async": "^1.4.2",
+    "tilestrata-dependency": "^0.4.1"
   },
   "devDependencies": {
-    "chai": "^1.10.0",
-    "mocha": "^2.0.1"
+    "chai": "^3.3.0",
+    "mocha": "^2.3.3"
   },
   "peerDependencies": {
     "tilestrata": "*"
